--- a/final/sass/_modules.scss
+++ b/final/sass/_modules.scss
@@ -20,10 +20,48 @@
       }
     }
   }
+  
+
+// LOOK AT HOW MUCH TYPING THIS SAVES 
+  @for $i from 1 through 5 {
+    .item:nth-child(#{$i}) {
+      background: url('../img/background#{$i}.jpg');
+      background-size: cover;
+    }
+  }
+
+  /*
+
+  THAT IS AMAZING
+
+  .item:nth-child(1) {
+    background: url('../img/bridge-czech-republic-iron-3489.jpg') top center no-repeat;
+    background-size: cover;
+  }
+
+  .item:nth-child(2) {
+    background: url('../img/building-fire-escape-3530.jpg') top center no-repeat;
+    background-size: cover;
+  }
+
+  .item:nth-child(3) {
+    background: url('../img/city-skyline-skyscrapers-2773.jpg') top center no-repeat;
+    background-size: cover;
+  }
+
+  .item:nth-child(4) {
+    background: url('../img/jetty-night-3519.jpg') top center no-repeat;
+    background-size: cover;
+  }
+
+  .item:nth-child(5) {
+    background: url('../img/fabric-industry-3503.jpg') top center no-repeat;
+    background-size: cover;
+  }*/
 }
 
 .carousel--overlay {
-  background: rgba(54, 57, 66, .5);
+  background: rgba(54, 57, 66, .7);
   display: flex;
   height: 100%;
   position: relative;
@@ -65,7 +103,6 @@
 
       a {
         color: white;
-        font-family: oswald;
         text-decoration: none;
       }
     }
